--- a/umbrello/umbrello.desktop
+++ b/umbrello/umbrello.desktop
@@ -6,11 +6,57 @@ Icon=umbrello
 X-DocPath=umbrello/index.html
 Terminal=false
 Name=Umbrello
+Name[br]=Umbrello
+Name[ca]=Umbrello
+Name[cs]=Umbrello
+Name[cy]=Umbrello
+Name[da]=Umbrello
+Name[de]=Umbrello
+Name[el]=Umbrello
+Name[en_GB]=Umbrello
+Name[eo]=Umbrello
+Name[es]=Umbrello
+Name[et]=Umbrello
+Name[eu]=Umbrello
+Name[fi]=Umbrello
+Name[fr]=Umbrello
+Name[ga]=Umbrello
+Name[gl]=Umbrello
+Name[he]=Umbrello
+Name[hu]=Umbrello
+Name[is]=Umbrello
+Name[it]=Umbrello
+Name[ja]=Umbrello
+Name[kk]=Umbrello
+Name[km]=Umbrello
+Name[ko]=Umbrello
+Name[lt]=Umbrello
+Name[lv]=Umbrello
+Name[ms]=Umbrello
+Name[nb]=Umbrello
+Name[nds]=Umbrello
 Name[ne]=अम्ब्रेलो
+Name[nl]=Umbrello
+Name[nn]=Umbrello
 Name[pa]=ਉਮਬਰਿੱਲਓ
+Name[pl]=Umbrello
+Name[pt]=Umbrello
+Name[pt_BR]=Umbrello
+Name[ro]=Umbrello
+Name[ru]=Umbrello
+Name[sk]=Umbrello
+Name[sl]=Umbrello
 Name[sr]=Умбрело
+Name[sr@latin]=Umbrello
+Name[sv]=Umbrello
 Name[ta]=  அம்ரல்லோ
+Name[tg]=Umbrello
+Name[tr]=Umbrello
+Name[uk]=Umbrello
+Name[wa]=Umbrello
 Name[x-test]=xxUmbrelloxx
+Name[zh_CN]=Umbrello
+Name[zh_TW]=Umbrello
 GenericName=UML Modeller
 GenericName[ca]=Modelador UML
 GenericName[cs]=UML modelář
@@ -18,6 +64,7 @@ GenericName[cy]=Modelydd UML
 GenericName[da]=UML Modellering
 GenericName[de]=UML-Modellierer
 GenericName[el]=Μοντελοποιητής UML
+GenericName[en_GB]=UML Modeller
 GenericName[eo]=UML-Modelilo
 GenericName[es]=Modelador de UML
 GenericName[et]=UML-i modelleerimise rakendus
@@ -28,10 +75,13 @@ GenericName[fr]=Modeleur UML
 GenericName[ga]=Samhaltóir UML
 GenericName[gl]=Modelador de UML
 GenericName[hu]=UML-modellező
+GenericName[is]=UML Modeller
 GenericName[it]=Modellatore UML
 GenericName[ja]=UML モデラー
 GenericName[kk]=UML үлгілегіші
+GenericName[km]=UML Modeller
 GenericName[ko]=UML 모델러
+GenericName[lt]=UML Modeller
 GenericName[lv]=UML modelētājs
 GenericName[ms]=Pemodel UML
 GenericName[nb]=UML-modelleringsprogram
@@ -55,5 +105,6 @@ GenericName[tr]=UML Modelleyici
 GenericName[uk]=Засіб моделювання UML
 GenericName[x-test]=xxUML Modellerxx
 GenericName[zh_CN]=UML 建模工具
+GenericName[zh_TW]=UML Modeller
 MimeType=application/x-uml;
 Categories=Qt;KDE;Development;
