SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdesdk/umbrello/; revision=1027109

--- a/umbrello/umbrello.desktop
+++ b/umbrello/umbrello.desktop
@@ -6,6 +6,7 @@ Icon=umbrello
 X-DocPath=umbrello/index.html
 Terminal=false
 Name=Umbrello
+Name[bg]=Umbrello
 Name[br]=Umbrello
 Name[ca]=Umbrello
 Name[cs]=Umbrello
@@ -58,6 +59,7 @@ Name[x-test]=xxUmbrelloxx
 Name[zh_CN]=Umbrello
 Name[zh_TW]=Umbrello
 GenericName=UML Modeller
+GenericName[bg]=Моделиране на UML
 GenericName[ca]=Modelador UML
 GenericName[cs]=UML modelář
 GenericName[cy]=Modelydd UML
