Patch from Markus Schulz applied - codegenerator for Vala.
svn path=/trunk/KDE/kdesdk/umbrello/; revision=1032431

--- a/umbrello/umbrelloui.rc
+++ b/umbrello/umbrelloui.rc
@@ -71,6 +71,7 @@
       <Action name="setLang_python"/>
       <Action name="setLang_ruby"/>
       <Action name="setLang_tcl"/>
+      <Action name="setLang_vala"/>
       <Action name="setLang_xmlschema"/>
     </Menu>
     <Separator/>
