Moving some static functions from umlscene to the new widgetlist_utils.
svn path=/branches/work/soc-umbrello/; revision=1036548

--- a/umbrello/CMakeLists.txt
+++ b/umbrello/CMakeLists.txt
@@ -339,6 +339,7 @@ set (libwidgets_SRCS
     widgets/widget_utils.cpp
     widgets/widgetbase.cpp
     widgets/widgethandle.cpp
+    widgets/widgetlist_utils.cpp
 )
 
 set (libcontroller_SRCS
