* Planted widget->activate() calls at appropriate places.   (Results in better initialization of widget state)   (Also results in AssociaitonWidgets being visible unlike before)
* Cleaned ToolBar* classes.

* WidgetBase now inherits QGraphicsObject class of Qt4.6.

* Fixed setID method to generate valid id in case arg is None.


svn path=/branches/work/soc-umbrello/; revision=1058911

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 project(umbrello)
 
 # search packages used by KDE
+set(QT_MIN_VERSION "4.6.0")
+find_package(Qt4 REQUIRED)
 find_package(KDE4 REQUIRED)
 include(KDE4Defaults)
 include(MacroLibrary)
