SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdesdk/umbrello/; revision=1068964

--- a/umbrello/umbrello.desktop
+++ b/umbrello/umbrello.desktop
@@ -48,6 +48,8 @@ Name[ru]=Umbrello
 Name[sk]=Umbrello
 Name[sl]=Umbrello
 Name[sr]=Умбрело
+Name[sr@ijekavian]=Умбрело
+Name[sr@ijekavianlatin]=Umbrello
 Name[sr@latin]=Umbrello
 Name[sv]=Umbrello
 Name[ta]=  அம்ரல்லோ
@@ -99,6 +101,8 @@ GenericName[ru]=Средство UML моделирования
 GenericName[sk]=Modelár UML
 GenericName[sl]=Modelirnik UML
 GenericName[sr]=УМЛ моделар
+GenericName[sr@ijekavian]=УМЛ моделар
+GenericName[sr@ijekavianlatin]=UML modelar
 GenericName[sr@latin]=UML modelar
 GenericName[sv]=UML-modellering
 GenericName[ta]=UML மோடெல்லார்
