SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.3/kdesdk/umbrello/; revision=1072376

--- a/umbrello/umbrello.desktop
+++ b/umbrello/umbrello.desktop
@@ -8,6 +8,7 @@ Terminal=false
 Name=Umbrello
 Name[br]=Umbrello
 Name[ca]=Umbrello
+Name[ca@valencia]=Umbrello
 Name[cs]=Umbrello
 Name[cy]=Umbrello
 Name[da]=Umbrello
@@ -59,6 +60,7 @@ Name[zh_CN]=Umbrello
 Name[zh_TW]=Umbrello
 GenericName=UML Modeller
 GenericName[ca]=Modelador UML
+GenericName[ca@valencia]=Modelador UML
 GenericName[cs]=UML modelář
 GenericName[cy]=Modelydd UML
 GenericName[da]=UML Modellering
