SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.4/kdesdk/umbrello/; revision=1072529

--- a/umbrello/umbrello.desktop
+++ b/umbrello/umbrello.desktop
@@ -9,6 +9,7 @@ Name=Umbrello
 Name[bg]=Umbrello
 Name[br]=Umbrello
 Name[ca]=Umbrello
+Name[ca@valencia]=Umbrello
 Name[cs]=Umbrello
 Name[cy]=Umbrello
 Name[da]=Umbrello
@@ -63,6 +64,7 @@ Name[zh_TW]=Umbrello
 GenericName=UML Modeller
 GenericName[bg]=Моделиране на UML
 GenericName[ca]=Modelador UML
+GenericName[ca@valencia]=Modelador UML
 GenericName[cs]=UML modelář
 GenericName[cy]=Modelydd UML
 GenericName[da]=UML Modellering
