SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.4/kdesdk/umbrello/; revision=1082809

--- a/umbrello/umbrello.desktop
+++ b/umbrello/umbrello.desktop
@@ -40,7 +40,7 @@ Name[nds]=Umbrello
 Name[ne]=अम्ब्रेलो
 Name[nl]=Umbrello
 Name[nn]=Umbrello
-Name[pa]=ਉਮਬਰਿੱਲਓ
+Name[pa]=ਉਮਬਰਿੱਲੋ
 Name[pl]=Umbrello
 Name[pt]=Umbrello
 Name[pt_BR]=Umbrello
