SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdesdk/umbrello/; revision=1085569

--- a/umbrello/umbrello.desktop
+++ b/umbrello/umbrello.desktop
@@ -9,6 +9,7 @@ Name=Umbrello
 Name[bg]=Umbrello
 Name[br]=Umbrello
 Name[ca]=Umbrello
+Name[ca@valencia]=Umbrello
 Name[cs]=Umbrello
 Name[cy]=Umbrello
 Name[da]=Umbrello
@@ -39,7 +40,7 @@ Name[nds]=Umbrello
 Name[ne]=अम्ब्रेलो
 Name[nl]=Umbrello
 Name[nn]=Umbrello
-Name[pa]=ਉਮਬਰਿੱਲਓ
+Name[pa]=ਉਮਬਰਿੱਲੋ
 Name[pl]=Umbrello
 Name[pt]=Umbrello
 Name[pt_BR]=Umbrello
@@ -63,6 +64,7 @@ Name[zh_TW]=Umbrello
 GenericName=UML Modeller
 GenericName[bg]=Моделиране на UML
 GenericName[ca]=Modelador UML
+GenericName[ca@valencia]=Modelador UML
 GenericName[cs]=UML modelář
 GenericName[cy]=Modelydd UML
 GenericName[da]=UML Modellering
