Make executable the Type=Application .desktop files we install, so that they can be used even from a KDE running in another prefix (http://markmail.org/message/4p3krovtnzwx35zd)
svn path=/trunk/KDE/kdesdk/umbrello/; revision=1188169

--- a/umbrello/CMakeLists.txt
+++ b/umbrello/CMakeLists.txt
@@ -437,7 +437,7 @@ install(TARGETS umbrello ${INSTALL_TARGETS_DEFAULT_ARGS} )
 
 ########### install files ###############
 
-install( FILES umbrello.desktop  DESTINATION  ${XDG_APPS_INSTALL_DIR} )
+install( PROGRAMS umbrello.desktop  DESTINATION  ${XDG_APPS_INSTALL_DIR} )
 install( FILES
     umbrelloui.rc
     docgenerators/xmi2docbook.xsl
