SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdesdk/umbrello/; revision=1188906

--- a/umbrello/umbrello.desktop
+++ b/umbrello/umbrello.desktop
@@ -6,6 +6,7 @@ Icon=umbrello
 X-DocPath=umbrello/index.html
 Terminal=false
 Name=Umbrello
+Name[ast]=Umbrello
 Name[bg]=Umbrello
 Name[br]=Umbrello
 Name[ca]=Umbrello
@@ -62,6 +63,7 @@ Name[x-test]=xxUmbrelloxx
 Name[zh_CN]=Umbrello
 Name[zh_TW]=Umbrello
 GenericName=UML Modeller
+GenericName[ast]=Modelador de UML
 GenericName[bg]=Моделиране на UML
 GenericName[ca]=Modelador UML
 GenericName[ca@valencia]=Modelador UML
