New files basictypes with unittests added. Is not yet used.
svn path=/branches/work/soc-umbrello/; revision=1217819

--- a/umbrello/CMakeLists.txt
+++ b/umbrello/CMakeLists.txt
@@ -365,6 +365,7 @@ set(libumbrello_SRCS
     association.cpp
     assocrules.cpp
     attribute.cpp
+    basictypes.cpp
     category.cpp
     checkconstraint.cpp
     classifier.cpp
