move the global icons (app and mime) in an own global subdir
this way we can handle in a different way the icons which must be installed "globally" (like the app icon and the mimetype icons) and the icons to be installed in the umbrello datadir

this also avoids the installation of hi64-app-umbrello.png in the unthemed pics directory

svn path=/trunk/KDE/kdesdk/umbrello/; revision=1230292

--- a/umbrello/pics/CMakeLists.txt
+++ b/umbrello/pics/CMakeLists.txt
@@ -1,4 +1,6 @@
 
+add_subdirectory(global)
+
 install( FILES actor.png  aggregation.png
 align-horizontal-left.png  align-horizontal-right.png
 align-vertical-top.png  align-vertical-bottom.png
@@ -48,7 +50,6 @@ cursor-umbr-message-found.png  umbr-message-lost.png  cursor-umbr-message-lost.p
 end_of_life.png  cursor-end_of_life.png  exception.png 
 cursor-exception.png cursor-object_node.png
 cursor-PrePostCondition.png PrePostCondition.png
-hi64-app-umbrello.png
 DESTINATION ${DATA_INSTALL_DIR}/umbrello/pics )
 
 kde4_install_icons( ${ICON_INSTALL_DIR} )
