install the local themed icons locally and as hicolor
this way:
- they don't pollute the global icon theme
- being hicolor, they are used also when the icon theme is not oxygen
- they still can be "overridden" by any icon theme

svn path=/trunk/KDE/kdesdk/umbrello/; revision=1230294

--- a/umbrello/pics/CMakeLists.txt
+++ b/umbrello/pics/CMakeLists.txt
@@ -52,5 +52,5 @@ cursor-exception.png cursor-object_node.png
 cursor-PrePostCondition.png PrePostCondition.png
 DESTINATION ${DATA_INSTALL_DIR}/umbrello/pics )
 
-kde4_install_icons( ${ICON_INSTALL_DIR} )
+kde4_install_icons(${DATA_INSTALL_DIR}/umbrello/icons)
 
