SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdesdk/umbrello/; revision=1231188

--- a/umbrello/umbrello.desktop
+++ b/umbrello/umbrello.desktop
@@ -50,6 +50,7 @@ Name[ro]=Umbrello
 Name[ru]=Umbrello
 Name[sk]=Umbrello
 Name[sl]=Umbrello
+Name[sq]=Umbrello
 Name[sr]=Умбрело
 Name[sr@ijekavian]=Умбрело
 Name[sr@ijekavianlatin]=Umbrello
@@ -106,6 +107,7 @@ GenericName[ro]=Modelator UML
 GenericName[ru]=Средство UML моделирования
 GenericName[sk]=Modelár UML
 GenericName[sl]=Modelirnik UML
+GenericName[sq]=Modelues UML
 GenericName[sr]=УМЛ моделар
 GenericName[sr@ijekavian]=УМЛ моделар
 GenericName[sr@ijekavianlatin]=UML modelar
