--- a/umbrello/pics/CMakeLists.txt
+++ b/umbrello/pics/CMakeLists.txt
@@ -1,4 +1,6 @@
 
+add_subdirectory(global)
+
 install( FILES actor.png  aggregation.png
 align-horizontal-left.png  align-horizontal-right.png
 align-vertical-top.png  align-vertical-bottom.png
@@ -48,8 +50,7 @@ cursor-umbr-message-found.png  umbr-message-lost.png  cursor-umbr-message-lost.p
 end_of_life.png  cursor-end_of_life.png  exception.png 
 cursor-exception.png cursor-object_node.png
 cursor-PrePostCondition.png PrePostCondition.png
-hi64-app-umbrello.png
 DESTINATION ${DATA_INSTALL_DIR}/umbrello/pics )
 
-kde4_install_icons( ${ICON_INSTALL_DIR} )
+kde4_install_icons(${DATA_INSTALL_DIR}/umbrello/icons)
 
