Remove the old buggy zoom slider with a better statusbar widget
svn path=/trunk/KDE/kdesdk/umbrello/; revision=1238262

--- a/umbrello/CMakeLists.txt
+++ b/umbrello/CMakeLists.txt
@@ -349,6 +349,7 @@ set (libwidgets_SRCS
     widgets/widget_factory.cpp
     widgets/widget_utils.cpp
     widgets/widgetbase.cpp
+    widgets/statusbartoolbutton.cpp
 )
 
 set (libcontroller_SRCS
@@ -385,7 +386,6 @@ set(libumbrello_SRCS
     foreignkeyconstraint.cpp
     icon_utils.cpp
     import_rose.cpp
-    kplayerslideraction.cpp
     linepath.cpp
     listpopupmenu.cpp
     main.cpp
