Does not compile when package subversion is missing - quick fix to compile again.
svn path=/trunk/KDE/kdesdk/umbrello/; revision=1240743

--- a/umbrello/CMakeLists.txt
+++ b/umbrello/CMakeLists.txt
@@ -4,18 +4,18 @@ add_subdirectory( headings )
 add_definitions(-DQT3_SUPPORT_WARNINGS)
 
 # Get subversion revision number
-find_package(Subversion)
-if(Subversion_FOUND)
-    # extract working copy information for SOURCE_DIR into MY_XXX variables
-    Subversion_WC_INFO(${CMAKE_CURRENT_SOURCE_DIR} MY)
-    set(SUBVERSION_REVISION ${MY_WC_REVISION})
-    MESSAGE(STATUS "\n-- SVN Revision: ${MY_WC_REVISION}\n")
-    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/cmake/revision.h.in ${CMAKE_CURRENT_BINARY_DIR}/revision.temp)
-    execute_process(COMMAND ${CMAKE_COMMAND} -E copy_if_different
-                    ${CMAKE_CURRENT_BINARY_DIR}/revision.temp ${CMAKE_CURRENT_BINARY_DIR}/revision.h
-                    COMMAND touch ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp)
-    file(REMOVE ${CMAKE_CURRENT_BINARY_DIR}/revision.temp)
-endif(Subversion_FOUND)
+# find_package(Subversion)
+# if(Subversion_FOUND)
+#     # extract working copy information for SOURCE_DIR into MY_XXX variables
+#     Subversion_WC_INFO(${CMAKE_CURRENT_SOURCE_DIR} MY)
+#     set(SUBVERSION_REVISION ${MY_WC_REVISION})
+#     MESSAGE(STATUS "\n-- SVN Revision: ${MY_WC_REVISION}\n")
+#     configure_file(${CMAKE_CURRENT_SOURCE_DIR}/cmake/revision.h.in ${CMAKE_CURRENT_BINARY_DIR}/revision.temp)
+#     execute_process(COMMAND ${CMAKE_COMMAND} -E copy_if_different
+#                     ${CMAKE_CURRENT_BINARY_DIR}/revision.temp ${CMAKE_CURRENT_BINARY_DIR}/revision.h
+#                     COMMAND touch ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp)
+#     file(REMOVE ${CMAKE_CURRENT_BINARY_DIR}/revision.temp)
+# endif(Subversion_FOUND)
 
 # Some definitions for experimental code or debugging
 #add_definitions(-DWANT_LVTOOLTIP)                # umllistiew
