SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdesdk/umbrello/; revision=1241620

--- a/umbrello/umbrello.desktop
+++ b/umbrello/umbrello.desktop
@@ -81,7 +81,7 @@ GenericName[es]=Modelador de UML
 GenericName[et]=UML-i modelleerimise rakendus
 GenericName[eu]=UML modelatzailea
 GenericName[fa]=مدل‌ساز UML
-GenericName[fi]=UML-mallintaja
+GenericName[fi]=UML-mallinnusohjelma
 GenericName[fr]=Modeleur UML
 GenericName[ga]=Samhaltóir UML
 GenericName[gl]=Modelador de UML
