Port Qt3 to Qt4 of the CodeEditor.
CodeEditor needs much more work, because not all features are implemented.
But that was already the case before the port.


svn path=/trunk/KDE/kdesdk/umbrello/; revision=1249859

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 project(umbrello)
 
-kde4_no_enable_final( umbrello )
+cmake_minimum_required(VERSION 2.8)
+
+# kde4_no_enable_final( umbrello )
 
 add_subdirectory( umbrello ) 
 
