added feature to change widgets text color
Text colors are changeable
- in the global ui settings (saved into umbrellorc)
- in the diagrams color settings (inital load from global settings)
- in the widget color settings

The text color of a widget is saved in the xmi file using the
attribute name 'textcolor'. If an xmi file without this attribute
is loaded the diagrams text color setting is used as text color.

svn path=/trunk/KDE/kdesdk/umbrello/; revision=1272518

--- a/umbrello/CMakeLists.txt
+++ b/umbrello/CMakeLists.txt
@@ -355,6 +355,7 @@ set(libcmds_SRCS
     cmds/widget/cmd_set_txt.cpp
     cmds/cmd_handle_rename.cpp
     cmds/widget/cmd_changeFontSelection.cpp
+    cmds/widget/cmd_changeTextColor.cpp
     cmds/widget/cmd_changeLineColor.cpp
     cmds/widget/cmd_changeFillColor.cpp
     cmds/widget/cmd_changeMulti.cpp
